# instant_chat

./: .gitignore  README.md  docker-compose.yml
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 46450316f225_users_table.py  a5b0c90b8c55_chats_table.py  f4e6bf29704f_messages_table.py
backend/api/: auth.py  chats.py  deps.py  root.py  websocket.py
backend/app/: app.py
backend/common/: response_model.py
backend/config/: config.py
backend/db/: db.py
backend/exc/: exception.py
backend/model/: chat.py  message.py  user.py
backend/redis_connector/: redis.py
backend/repository/: __init__.py  base.py  chat.py  message.py  user.py
backend/serializer/: __init__.py  chat.py  message.py  user.py
backend/service/: __init__.py  auth_service.py  chats_service.py  connection_manager.py  messages_service.py  notifications_service.py  session_manager.py  users_service.py
backend/util/: passwords.py
frontend/: index.html
frontend/chat/: index.html
frontend/login/: index.html
frontend/register/: index.html
nginx/templates/: default.conf.template
